# markdown2pdf

./: .firebaserc.example  .gitignore  Claude.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  deploy.sh  firebase.json  package.json  specs-functional.md  specs-technical.md
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
.github/workflows/: ci.yml  firebase-hosting-pull-request.yml  release.yml
rust/: Cargo.toml  build-wasm.sh
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: main.rs
rust/crates/core/: Cargo.toml
rust/crates/core/src/: convert.rs  lib.rs  world.rs
rust/crates/wasm/: Cargo.toml
rust/crates/wasm/src/: lib.rs
scripts/: test-wasm.mjs
skills/markdown2pdf/: README.md  SKILL.md
src/: app.css  app.html
src/lib/: markdown.ts  pdf.ts  pdf.worker.ts
src/lib/docs/: cli.md  embedding.md  index.ts  overview.md  playground.md  skill.md
src/routes/: +page.svelte
src/routes/docs/: +layout.svelte  +page.svelte  +page.ts
src/routes/docs/[slug]/: +page.svelte  +page.ts
src/routes/llms-full.txt/: +server.ts
src/routes/llms.txt/: +server.ts
src/routes/sitemap.xml/: +server.ts
static/: install.ps1  install.sh  robots.txt
