[package]
name = "markdown2pdf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI: convert markdown to PDF."

[[bin]]
name = "markdown2pdf"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
markdown2pdf-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
