[package]
name = "markdown2pdf-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WASM bindings: markdown to PDF in the browser."

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
markdown2pdf-core = { path = "../core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
